@@ -1,3 +1,8 @@
+2007-07-13 Jan Kryl (version 1.4.2)
+
+	* Bug in update of ident attribute was fixed. It was not possible
+	to nullify ident attribute.
+
 2007-06-25 Jan Kryl (version 1.4.1)
 
 	* Viewport of client's document identifing an error was cut out
